namespaces/live.cloud-platform.service.justice.gov.uk/fj-cait-staging/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fj-cait-staging
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "staging"
    pod-security.kubernetes.io/audit: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/application: "Get help with child arrangements"
    cloud-platform.justice.gov.uk/owner: "Central Digital Product Team: Central-Digital-Product-Team@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/pflr-cait"
    cloud-platform.justice.gov.uk/slack-channel: "cdpt-central-digital-product-team"
    cloud-platform.justice.gov.uk/team-name: "central-digital-product-team"
